# ANNonGPU

./: .gitignore  CMakeLists.txt  Readme.md  setup.py
include/: Array.hpp  RNGStates.hpp  bases.hpp  cuda_complex.hpp  cuda_kernel_defines.h  ensembles.hpp  operators.hpp  quantum_states.hpp  random.h  tiny_complex.hpp  types.h  utils.kernel
include/basis/: FermiString.hpp  FermionicString.hpp  Fermions.hpp  PauliString.hpp  Spins.h  bit_operations.hpp
include/ensembles/: ExactSummation.hpp  MonteCarlo.hpp  MonteCarloLoop.hpp  MonteCarloLoopPaulis.hpp
include/ensembles/policies/: Init_Policy.hpp  Update_Policy.hpp
include/network_functions/: ApplyOperator.hpp  CalibratePsi.hpp  ExpectationValue.hpp  HilbertSpaceDistance.hpp  KullbackLeibler.hpp  PsiAngles.hpp  PsiNorm.hpp  PsiOkVector.hpp  PsiVector.hpp  TDVP.hpp
include/operator/: Matrix4x4.hpp  MatrixElement.hpp  Operator.hpp  PauliString.hpp  SparseMatrix.hpp  Spins.h  SuperOperator.hpp
include/quantum_state/: PsiCNN.hpp  PsiClassical.hpp  PsiDeep.hpp  PsiDeepSigned.hpp  PsiExact.hpp  PsiFullyPolarized.hpp  PsiProductState.hpp  PsiRBM.hpp  psi_functions.hpp
include/quantum_state/detail/: Convolve.hpp
pyANNonGPU/: L2Regularization.py  LearningByGradientDescent.py  PsiCNN.py  PsiClassical.py  PsiDeep.py  PsiFullyPolarized.py  PsiRBM.py  SuperOperator.py  __init__.py  gradient_descent.py  main.cpp  main.cpp.template  new_RBM.py  new_classical_network.py  new_convolutional_network.py  new_neural_network.py
source/: ANNonGPU.cu  Array.cu  RNGStates.cu  main.cpp
source/ensembles/: ExactSummation.cu  MonteCarlo.cu  MonteCarloLoop.cu  MonteCarloLoopPaulis.cu
source/network_functions/: ApplyOperator.cu  ApplyOperator.cu.template  CalibratePsi.cu  CalibratePsi.cu.template  ExpectationValue.cu  ExpectationValue.cu.template  HilbertSpaceDistance.cu  HilbertSpaceDistance.cu.template  HilbertSpaceDistance_2nd_order.cu  HilbertSpaceDistance_PsiPair.cu  KullbackLeibler.cu  KullbackLeibler.cu.template  KullbackLeibler_2nd_order.cu  KullbackLeibler_with_operator.cu  PsiAngles.cu  PsiAngles.cu.template  PsiNorm.cu  PsiNorm.cu.template  PsiOkVector.cu  PsiOkVector.cu.template  PsiVector.cu  PsiVector.cu.template  TDVP.cu  TDVP.cu.template
source/operator/: Operator.cpp
source/quantum_state/: PsiCNN.cpp  PsiClassical.cu  PsiDeep.cu  PsiDeepSigned.cu
template_engine/: config.json  template_engine.py
test/: conftest.py  test_ExpectationValue.py  test_HilbertSpaceDistance.py  test_KullbackLeibler.py  test_Psi.py  test_PsiDeep.py  test_PsiPair.py  test_operator.py
